// Copyright 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message Quote {
  // The symbol or ticker for this quote
  string ticker = 1;

  // The timestamp, as nanoseconds since midnight
  int64 timestamp_ns = 2;

  // The best bid price
  double bid_px = 3;

  // The bid quantity
  int32 bid_qty = 4;

  // The best offer price
  double offer_px = 5;

  // The best offer quantiy
  int32 offer_qty = 6;
}

// Specifies how a sequence of TAQ quotes is stored in the Bigtable example
message Quotes {
  // The symbol or ticker for this quote
  string ticker = 1;

  // The timestamp, as nanoseconds since midnight
  repeated int64 timestamp_ns = 2;

  // The best bid price
  repeated double bid_px = 3;

  // The bid quantity
  repeated int32 bid_qty = 4;

  // The best offer price
  repeated double offer_px = 5;

  // The best offer quantiy
  repeated int32 offer_qty = 6;
}
